replace com.sun.Unsafe with jdk.internal.misc.Unsafe